# Equivariance_and_augmentation_for_Bayesian_neural_networks

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
ebnn/: __init__.py  data.py  layers.py  metrics.py  models.py  symmetrize.py  training.py
scripts/: train_symmetrization.py  train_theorem2.py  train_theorem4.py
tests/: test_smoke.py
